# fastapi_API

./: .env  TODO  main.py  pyproject.toml
models/: database.py  products.py
routers/: __init__.py  categories.py  jwt_auth.py  products.py
schemas/: __init__.py  categories.py  products.py
utils/: __init__.py  jwt_utils.py
